--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -30,4 +30,23 @@
     .projectsContainer .Grid .GridItem {
         max-width: 100%;
     }
+    .projectsContainer .Grid .GridItem .CardTitle {
+        font-size: 2rem;
+    }
+}
+@media screen and (max-width: 600px) {
+    .projectsContainer .Box {
+        width: 100%;
+        padding: 0;
+    }
+    .projectsContainer .Grid {
+        width: 100%;
+        display: block;
+    }
+    .projectsContainer .Grid .GridItem {
+        max-width: 100%;
+    }
+    .projectsContainer .Grid .GridItem .CardTitle {
+        font-size: 1rem;
+    }
 }
